retrive/objects/Ifirma_Rest_Data__mdt.object
<CustomObject>
    <fields>
        <fullName>Email_Addresser__c</fullName>
        <label>Email Addresser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	  <fields>
        <fullName>Abonent_Key__c</fullName>
        <label>Abonent Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Ifirma Rest Data</label>
    <pluralLabel>Ifirma Rest Data</pluralLabel>
</CustomObject>